method not allowed query params removed
